--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
+    "mongoose": "^7.2.0",
     "socket.io": "^4.6.1"
+  },
+  "devDependencies": {
+    "@flydotio/dockerfile": "^0.2.5"
   }
 }
