--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cross-fetch": "^3.1.6",
     "dotenv": "^16.0.3",
-    "mongoose": "^7.2.0",
     "socket.io": "^4.6.1"
   },
   "devDependencies": {
